--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^11.0.8",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "react-dropzone": "^14.2.3",
     "axios": "^1.6.7",
     "react-beautiful-dnd": "^13.1.1",
